[gd_scene load_steps=13 format=4 uid="uid://ciq2cts767knq"]

[ext_resource type="TileSet" uid="uid://j7dwhp68yp4w" path="res://assets/Tilemaps/game.tres" id="2_vc7tt"]
[ext_resource type="Script" uid="uid://jgs25ooihxk8" path="res://scripts/game_manager.gd" id="4_xk1af"]
[ext_resource type="FontFile" uid="uid://plalmr6b48qn" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_ng48n"]
[ext_resource type="Script" uid="uid://nsr6iulb2tr" path="res://scripts/powerup_manager.gd" id="6_vq3ky"]
[ext_resource type="PackedScene" uid="uid://bjg3fbj55cgu7" path="res://scenes/player.tscn" id="7_k3r30"]
[ext_resource type="PackedScene" uid="uid://4cnwogbcm6lt" path="res://scenes/spotlight_small.tscn" id="7_xmpam"]
[ext_resource type="PackedScene" uid="uid://c47n0jl0y20py" path="res://scenes/camera.tscn" id="8_7sfio"]
[ext_resource type="PackedScene" uid="uid://b2qx64xqac3dh" path="res://scenes/kill_zone.tscn" id="8_wevp2"]
[ext_resource type="PackedScene" uid="uid://cwmmnfc50xhcu" path="res://scenes/locker.tscn" id="9_mjunc"]
[ext_resource type="PackedScene" uid="uid://cpmm0vild0boj" path="res://scenes/laser.tscn" id="10_mp7eo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ivyll"]
blend_mode = 1
light_mode = 1

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ko5uo"]

[node name="Level" type="Node2D"]

[node name="TileMaps" type="Node2D" parent="."]

[node name="Background" type="TileMapLayer" parent="TileMaps"]
use_parent_material = true
tile_map_data = PackedByteArray("AADw//f/AAAAAAkAAADw//j/AAAAAAoAAADw//n/AAAAAAsAAADw//r/AAAAAAwAAADx//f/AAABAAkAAADx//j/AAABAAoAAADx//n/AAABAAsAAADx//r/AAABAAwAAADy//f/AAACAAkAAADy//j/AAACAAoAAADy//n/AAACAAsAAADy//r/AAACAAwAAADz//f/AAADAAkAAADz//j/AAADAAoAAADz//n/AAADAAsAAADz//r/AAADAAwAAADw//v/AAAAAAkAAADw//z/AAAAAAoAAADw//3/AAAAAAsAAADw//7/AAAAAAwAAADx//v/AAABAAkAAADx//z/AAABAAoAAADx//3/AAABAAsAAADx//7/AAABAAwAAADy//v/AAACAAkAAADy//z/AAACAAoAAADy//3/AAACAAsAAADy//7/AAACAAwAAADz//v/AAADAAkAAADz//z/AAADAAoAAADz//3/AAADAAsAAADz//7/AAADAAwAAADw////AAAAAAkAAADw/wAAAAAAAAoAAADw/wEAAAAAAAsAAADw/wIAAAAAAAwAAADx////AAABAAkAAADx/wAAAAABAAoAAADx/wEAAAABAAsAAADx/wIAAAABAAwAAADy////AAACAAkAAADy/wAAAAACAAoAAADy/wEAAAACAAsAAADy/wIAAAACAAwAAADz////AAADAAkAAADz/wAAAAADAAoAAADz/wEAAAADAAsAAADz/wIAAAADAAwAAADw/wMAAAAAAAkAAADw/wQAAAAAAAoAAADw/wUAAAAAAAsAAADw/wYAAAAAAAwAAADx/wMAAAABAAkAAADx/wQAAAABAAoAAADx/wUAAAABAAsAAADx/wYAAAABAAwAAADy/wMAAAACAAkAAADy/wQAAAACAAoAAADy/wUAAAACAAsAAADy/wYAAAACAAwAAADz/wMAAAADAAkAAADz/wQAAAADAAoAAADz/wUAAAADAAsAAADz/wYAAAADAAwAAAD0//f/AAAAAAkAAAD0//j/AAAAAAoAAAD0//n/AAAAAAsAAAD0//r/AAAAAAwAAAD1//f/AAABAAkAAAD1//j/AAABAAoAAAD1//n/AAABAAsAAAD1//r/AAABAAwAAAD2//f/AAACAAkAAAD2//j/AAACAAoAAAD2//n/AAACAAsAAAD2//r/AAACAAwAAAD3//f/AAADAAkAAAD3//j/AAADAAoAAAD3//n/AAADAAsAAAD3//r/AAADAAwAAAD0//v/AAAAAAkAAAD0//z/AAAAAAoAAAD0//3/AAAAAAsAAAD0//7/AAAAAAwAAAD1//v/AAABAAkAAAD1//z/AAABAAoAAAD1//3/AAABAAsAAAD1//7/AAABAAwAAAD2//v/AAACAAkAAAD2//z/AAACAAoAAAD2//3/AAACAAsAAAD2//7/AAACAAwAAAD3//v/AAADAAkAAAD3//z/AAADAAoAAAD3//3/AAADAAsAAAD3//7/AAADAAwAAAD0////AAAAAAkAAAD0/wAAAAAAAAoAAAD0/wEAAAAAAAsAAAD0/wIAAAAAAAwAAAD1////AAABAAkAAAD1/wAAAAABAAoAAAD1/wEAAAABAAsAAAD1/wIAAAABAAwAAAD2////AAACAAkAAAD2/wAAAAACAAoAAAD2/wEAAAACAAsAAAD2/wIAAAACAAwAAAD3////AAADAAkAAAD3/wAAAAADAAoAAAD3/wEAAAADAAsAAAD3/wIAAAADAAwAAAD0/wMAAAAAAAkAAAD0/wQAAAAAAAoAAAD0/wUAAAAAAAsAAAD0/wYAAAAAAAwAAAD1/wMAAAABAAkAAAD1/wQAAAABAAoAAAD1/wUAAAABAAsAAAD1/wYAAAABAAwAAAD2/wMAAAACAAkAAAD2/wQAAAACAAoAAAD2/wUAAAACAAsAAAD2/wYAAAACAAwAAAD3/wMAAAADAAkAAAD3/wQAAAADAAoAAAD3/wUAAAADAAsAAAD3/wYAAAADAAwAAAD4//f/AAAAAAkAAAD4//j/AAAAAAoAAAD4//n/AAAAAAsAAAD4//r/AAAAAAwAAAD5//f/AAABAAkAAAD5//j/AAABAAoAAAD5//n/AAABAAsAAAD5//r/AAABAAwAAAD6//f/AAACAAkAAAD6//j/AAACAAoAAAD6//n/AAACAAsAAAD6//r/AAACAAwAAAD7//f/AAADAAkAAAD7//j/AAADAAoAAAD7//n/AAADAAsAAAD7//r/AAAGAAAAAAD4//v/AAAAAAkAAAD4//z/AAAAAAoAAAD4//3/AAAAAAsAAAD4//7/AAAAAAwAAAD5//v/AAABAAkAAAD5//z/AAABAAoAAAD5//3/AAABAAsAAAD5//7/AAABAAwAAAD6//v/AAACAAkAAAD6//z/AAACAAoAAAD6//3/AAACAAsAAAD6//7/AAACAAwAAAD7//v/AAAGAAEAAAD7//z/AAAGAAIAAAD7//3/AAADAAsAAAD7//7/AAADAAwAAAD4////AAAAAAkAAAD4/wAAAAAAAAoAAAD4/wEAAAAAAAsAAAD4/wIAAAAAAAwAAAD5////AAABAAkAAAD5/wAAAAABAAoAAAD5/wEAAAABAAsAAAD5/wIAAAABAAwAAAD6////AAACAAkAAAD6/wAAAAACAAoAAAD6/wEAAAACAAsAAAD6/wIAAAACAAwAAAD7////AAADAAkAAAD7/wAAAAADAAoAAAD7/wEAAAADAAsAAAD7/wIAAAADAAwAAAD4/wMAAAAAAAkAAAD4/wQAAAAAAAoAAAD4/wUAAAAAAAsAAAD4/wYAAAAAAAwAAAD5/wMAAAABAAkAAAD5/wQAAAABAAoAAAD5/wUAAAABAAsAAAD5/wYAAAABAAwAAAD6/wMAAAACAAkAAAD6/wQAAAACAAoAAAD6/wUAAAACAAsAAAD6/wYAAAACAAwAAAD7/wMAAAADAAkAAAD7/wQAAAADAAoAAAD7/wUAAAADAAsAAAD7/wYAAAADAAwAAAD8//f/AAAAAAkAAAD8//j/AAAAAAoAAAD8//n/AAAAAAsAAAD8//r/AAAHAAAAAAD9//f/AAABAAkAAAD9//j/AAABAAoAAAD9//n/AAABAAsAAAD9//r/AAAIAAAAAAD+//f/AAACAAkAAAD+//j/AAACAAoAAAD+//n/AAACAAsAAAD+//r/AAACAAwAAAD///f/AAADAAkAAAD///j/AAADAAoAAAD///n/AAADAAsAAAD///r/AAADAAwAAAD8//v/AAAHAAEAAAD8//z/AAAHAAIAAAD8//3/AAAAAAsAAAD8//7/AAAAAAwAAAD9//v/AAAIAAEAAAD9//z/AAAIAAIAAAD9//3/AAABAAsAAAD9//7/AAABAAwAAAD+//v/AAACAAkAAAD+//z/AAACAAoAAAD+//3/AAACAAsAAAD+//7/AAACAAwAAAD///v/AAADAAkAAAD///z/AAADAAoAAAD///3/AAADAAsAAAD///7/AAADAAwAAAD8////AAAAAAkAAAD8/wAAAAAAAAoAAAD8/wEAAAAAAAsAAAD8/wIAAAAAAAwAAAD9////AAABAAkAAAD9/wAAAAABAAoAAAD9/wEAAAABAAsAAAD9/wIAAAABAAwAAAD+////AAACAAkAAAD+/wAAAAACAAoAAAD+/wEAAAACAAsAAAD+/wIAAAACAAwAAAD/////AAADAAkAAAD//wAAAAADAAoAAAD//wEAAAADAAsAAAD//wIAAAADAAwAAAD8/wMAAAAAAAkAAAD8/wQAAAAAAAoAAAD8/wUAAAAAAAsAAAD8/wYAAAAAAAwAAAD9/wMAAAABAAkAAAD9/wQAAAABAAoAAAD9/wUAAAABAAsAAAD9/wYAAAABAAwAAAD+/wMAAAACAAkAAAD+/wQAAAACAAoAAAD+/wUAAAACAAsAAAD+/wYAAAACAAwAAAD//wMAAAADAAkAAAD//wQAAAADAAoAAAD//wUAAAADAAsAAAD//wYAAAADAAwAAAAAAPf/AAAAAAkAAAAAAPj/AAAAAAoAAAAAAPn/AAAAAAsAAAAAAPr/AAAAAAwAAAABAPf/AAABAAkAAAABAPj/AAABAAoAAAABAPn/AAABAAsAAAABAPr/AAABAAwAAAACAPf/AAACAAkAAAACAPj/AAACAAoAAAACAPn/AAACAAsAAAACAPr/AAACAAwAAAADAPf/AAADAAkAAAADAPj/AAADAAoAAAADAPn/AAADAAsAAAADAPr/AAADAAwAAAAAAPv/AAAAAAkAAAAAAPz/AAAAAAoAAAAAAP3/AAAAAAsAAAAAAP7/AAAAAAwAAAABAPv/AAABAAkAAAABAPz/AAAGAAAAAAABAP3/AAAGAAEAAAABAP7/AAAGAAIAAAACAPv/AAACAAkAAAACAPz/AAAHAAAAAAACAP3/AAAHAAEAAAACAP7/AAAHAAIAAAADAPv/AAADAAkAAAADAPz/AAAIAAAAAAADAP3/AAAIAAEAAAADAP7/AAAIAAIAAAAAAP//AAAAAAkAAAAAAAAAAAAAAAoAAAAAAAEAAAAAAAsAAAAAAAIAAAAAAAwAAAABAP//AAABAAkAAAABAAAAAAABAAoAAAABAAEAAAABAAsAAAABAAIAAAABAAwAAAACAP//AAACAAkAAAACAAAAAAACAAoAAAACAAEAAAACAAsAAAACAAIAAAACAAwAAAADAP//AAADAAkAAAADAAAAAAADAAoAAAADAAEAAAADAAsAAAADAAIAAAADAAwAAAAAAAMAAAAAAAkAAAAAAAQAAAAAAAoAAAAAAAUAAAAAAAsAAAAAAAYAAAAAAAwAAAABAAMAAAABAAkAAAABAAQAAAABAAoAAAABAAUAAAABAAsAAAABAAYAAAABAAwAAAACAAMAAAACAAkAAAACAAQAAAACAAoAAAACAAUAAAACAAsAAAACAAYAAAACAAwAAAADAAMAAAADAAkAAAADAAQAAAADAAoAAAADAAUAAAADAAsAAAADAAYAAAADAAwAAAAEAPf/AAAAAAkAAAAEAPj/AAAAAAoAAAAEAPn/AAAAAAsAAAAEAPr/AAAAAAwAAAAFAPf/AAABAAkAAAAFAPj/AAABAAoAAAAFAPn/AAABAAsAAAAFAPr/AAAGAAAAAAAGAPf/AAACAAkAAAAGAPj/AAACAAoAAAAGAPn/AAACAAsAAAAGAPr/AAAHAAAAAAAHAPf/AAADAAkAAAAHAPj/AAADAAoAAAAHAPn/AAADAAsAAAAHAPr/AAAIAAAAAAAEAPv/AAAAAAkAAAAEAPz/AAAAAAoAAAAEAP3/AAAAAAsAAAAEAP7/AAAAAAwAAAAFAPv/AAAGAAEAAAAFAPz/AAAGAAIAAAAFAP3/AAABAAsAAAAFAP7/AAABAAwAAAAGAPv/AAAHAAEAAAAGAPz/AAAHAAIAAAAGAP3/AAACAAsAAAAGAP7/AAACAAwAAAAHAPv/AAAIAAEAAAAHAPz/AAAIAAIAAAAHAP3/AAADAAsAAAAHAP7/AAADAAwAAAAEAP//AAAAAAkAAAAEAAAAAAAAAAoAAAAEAAEAAAAAAAsAAAAEAAIAAAAAAAwAAAAFAP//AAABAAkAAAAFAAAAAAABAAoAAAAFAAEAAAABAAsAAAAFAAIAAAABAAwAAAAGAP//AAACAAkAAAAGAAAAAAACAAoAAAAGAAEAAAACAAsAAAAGAAIAAAACAAwAAAAHAP//AAADAAkAAAAHAAAAAAADAAoAAAAHAAEAAAADAAsAAAAHAAIAAAADAAwAAAAEAAMAAAAAAAkAAAAEAAQAAAAAAAoAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAwAAAAFAAMAAAABAAkAAAAFAAQAAAABAAoAAAAFAAUAAAABAAsAAAAFAAYAAAABAAwAAAAGAAMAAAACAAkAAAAGAAQAAAACAAoAAAAGAAUAAAACAAsAAAAGAAYAAAACAAwAAAAHAAMAAAADAAkAAAAHAAQAAAADAAoAAAAHAAUAAAADAAsAAAAHAAYAAAADAAwAAAAIAPf/AAAAAAkAAAAIAPj/AAAAAAoAAAAIAPn/AAAAAAsAAAAIAPr/AAAAAAwAAAAJAPf/AAABAAkAAAAJAPj/AAABAAoAAAAJAPn/AAABAAsAAAAJAPr/AAABAAwAAAAKAPf/AAACAAkAAAAKAPj/AAACAAoAAAAKAPn/AAACAAsAAAAKAPr/AAACAAwAAAALAPf/AAADAAkAAAALAPj/AAADAAoAAAALAPn/AAADAAsAAAALAPr/AAADAAwAAAAIAPv/AAAAAAkAAAAIAPz/AAAAAAoAAAAIAP3/AAAAAAsAAAAIAP7/AAAAAAwAAAAJAPv/AAABAAkAAAAJAPz/AAABAAoAAAAJAP3/AAAGAAAAAAAJAP7/AAAGAAEAAAAKAPv/AAACAAkAAAAKAPz/AAACAAoAAAAKAP3/AAAHAAAAAAAKAP7/AAAHAAEAAAALAPv/AAADAAkAAAALAPz/AAADAAoAAAALAP3/AAAIAAAAAAALAP7/AAAIAAEAAAAIAP//AAAAAAkAAAAIAAAAAAAAAAoAAAAIAAEAAAAAAAsAAAAIAAIAAAAAAAwAAAAJAP//AAAGAAIAAAAJAAAAAAABAAoAAAAJAAEAAAABAAsAAAAJAAIAAAABAAwAAAAKAP//AAAHAAIAAAAKAAAAAAACAAoAAAAKAAEAAAACAAsAAAAKAAIAAAACAAwAAAALAP//AAAIAAIAAAALAAAAAAADAAoAAAALAAEAAAADAAsAAAALAAIAAAADAAwAAAAIAAMAAAAAAAkAAAAIAAQAAAAAAAoAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAwAAAAJAAMAAAABAAkAAAAJAAQAAAABAAoAAAAJAAUAAAABAAsAAAAJAAYAAAABAAwAAAAKAAMAAAACAAkAAAAKAAQAAAACAAoAAAAKAAUAAAACAAsAAAAKAAYAAAACAAwAAAALAAMAAAADAAkAAAALAAQAAAADAAoAAAALAAUAAAADAAsAAAALAAYAAAADAAwAAAAMAPf/AAAAAAkAAAAMAPj/AAAAAAoAAAAMAPn/AAAAAAsAAAAMAPr/AAAAAAwAAAANAPf/AAABAAkAAAANAPj/AAABAAoAAAANAPn/AAABAAsAAAANAPr/AAABAAwAAAAOAPf/AAACAAkAAAAOAPj/AAACAAoAAAAOAPn/AAACAAsAAAAOAPr/AAACAAwAAAAPAPf/AAADAAkAAAAPAPj/AAADAAoAAAAPAPn/AAADAAsAAAAPAPr/AAADAAwAAAAMAPv/AAAAAAkAAAAMAPz/AAAAAAoAAAAMAP3/AAAAAAsAAAAMAP7/AAAAAAwAAAANAPv/AAABAAkAAAANAPz/AAABAAoAAAANAP3/AAABAAsAAAANAP7/AAABAAwAAAAOAPv/AAACAAkAAAAOAPz/AAACAAoAAAAOAP3/AAACAAsAAAAOAP7/AAACAAwAAAAPAPv/AAADAAkAAAAPAPz/AAADAAoAAAAPAP3/AAADAAsAAAAPAP7/AAADAAwAAAAMAP//AAAAAAkAAAAMAAAAAAAAAAoAAAAMAAEAAAAAAAsAAAAMAAIAAAAAAAwAAAANAP//AAABAAkAAAANAAAAAAABAAoAAAANAAEAAAABAAsAAAANAAIAAAABAAwAAAAOAP//AAACAAkAAAAOAAAAAAACAAoAAAAOAAEAAAACAAsAAAAOAAIAAAACAAwAAAAPAP//AAADAAkAAAAPAAAAAAADAAoAAAAPAAEAAAADAAsAAAAPAAIAAAADAAwAAAAMAAMAAAAAAAkAAAAMAAQAAAAAAAoAAAAMAAUAAAAAAAsAAAAMAAYAAAAAAAwAAAANAAMAAAABAAkAAAANAAQAAAABAAoAAAANAAUAAAABAAsAAAANAAYAAAABAAwAAAAOAAMAAAACAAkAAAAOAAQAAAACAAoAAAAOAAUAAAACAAsAAAAOAAYAAAACAAwAAAAPAAMAAAADAAkAAAAPAAQAAAADAAoAAAAPAAUAAAADAAsAAAAPAAYAAAADAAwAAADw//b/AAAAAAkAAADx//b/AAABAAkAAADy//b/AAACAAkAAADz//b/AAADAAkAAAD0//b/AAAAAAkAAAD1//b/AAABAAkAAAD2//b/AAACAAkAAAD3//b/AAADAAkAAAD4//b/AAAAAAkAAAD5//b/AAABAAkAAAD6//b/AAACAAkAAAD7//b/AAADAAkAAAD8//b/AAAAAAkAAAD9//b/AAABAAkAAAD+//b/AAACAAkAAAD///b/AAADAAkAAAAAAPb/AAAAAAkAAAABAPb/AAABAAkAAAACAPb/AAACAAkAAAADAPb/AAADAAkAAAAEAPb/AAAAAAkAAAAFAPb/AAABAAkAAAAGAPb/AAACAAkAAAAHAPb/AAADAAkAAAAIAPb/AAAAAAkAAAAJAPb/AAABAAkAAAAKAPb/AAACAAkAAAALAPb/AAADAAkAAAAMAPb/AAAAAAkAAAANAPb/AAABAAkAAAAOAPb/AAACAAkAAAAPAPb/AAADAAkAAAA=")
tile_set = ExtResource("2_vc7tt")

[node name="Mid" type="TileMapLayer" parent="TileMaps"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD3/wAAAAADAAAAAAD4/wAAAAADAAAAAAD5/wAAAAADAAAAAAD6/wAAAAADAAAAAAD7/wAAAAADAAAAAAD8/wAAAAADAAAAAAD9/wAAAAADAAAAAAD+/wAAAAADAAAAAAD//wAAAAADAAAAAAAAAAAAAAADAAAAAAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAIAAAAAAADAAAAAAAJAAAAAAADAAAAAAAKAAAAAAADAAAAAAALAAAAAAADAAAAAAAMAAAAAAADAAAAAAAMAAEAAAAEAAEAAAALAAEAAAAEAAEAAAAKAAEAAAAEAAEAAAAJAAEAAAAEAAEAAAAIAAEAAAAEAAEAAAAHAAEAAAAEAAEAAAAGAAEAAAAEAAEAAAAFAAEAAAAEAAEAAAAEAAEAAAAEAAEAAAADAAEAAAAEAAEAAAACAAEAAAAEAAEAAAABAAEAAAAEAAEAAAAAAAEAAAAEAAEAAAD//wEAAAAEAAEAAAD+/wEAAAAEAAEAAAD9/wEAAAAEAAEAAAD8/wEAAAAEAAEAAAD7/wEAAAAEAAEAAAD6/wEAAAAEAAEAAAD5/wEAAAAEAAEAAAD4/wEAAAAEAAEAAAD3/wEAAAAEAAEAAAD3/wIAAAAEAAEAAAD4/wIAAAAEAAEAAAD5/wIAAAAEAAEAAAD6/wIAAAAEAAEAAAD7/wIAAAAEAAEAAAD8/wMAAAAEAAEAAAD9/wMAAAAEAAEAAAD+/wMAAAAEAAEAAAD//wMAAAAEAAEAAAAAAAMAAAAEAAEAAAABAAMAAAAEAAEAAAACAAMAAAAEAAEAAAD9/wIAAAAEAAEAAAD8/wIAAAAEAAEAAAD+/wIAAAAEAAEAAAD//wIAAAAEAAEAAAAAAAIAAAAEAAEAAAABAAIAAAAEAAEAAAACAAIAAAAEAAEAAAADAAIAAAAEAAEAAAAEAAIAAAAEAAEAAAAFAAIAAAAEAAEAAAAGAAIAAAAEAAEAAAAHAAIAAAAEAAEAAAAMAAIAAAAEAAEAAAALAAIAAAAEAAEAAAAKAAIAAAAEAAEAAAAJAAIAAAAEAAEAAAAIAAIAAAAEAAEAAAALAAMAAAAEAAEAAAAMAAMAAAAEAAEAAAAKAAMAAAAEAAEAAAAJAAMAAAAEAAEAAAAIAAMAAAAEAAEAAAAHAAMAAAAEAAEAAAAGAAMAAAAEAAEAAAAFAAMAAAAEAAEAAAAEAAMAAAAEAAEAAAADAAMAAAAEAAEAAAD7/wMAAAAEAAEAAAD6/wMAAAAEAAEAAAD5/wMAAAAEAAEAAAD4/wMAAAAEAAEAAAD3/wMAAAAEAAEAAAANAP//AAADAAAAAAANAP7/AAADAAAAAAANAP3/AAADAAAAAAANAPz/AAADAAAAAAANAPv/AAADAAAAAAANAPr/AAADAAAAAAANAPn/AAADAAAAAAAMAPj/AAADAAAAAAALAPj/AAADAAAAAAAKAPj/AAADAAAAAAAJAPj/AAADAAAAAAAIAPj/AAADAAAAAAAHAPj/AAADAAAAAAAGAPj/AAADAAAAAAAFAPj/AAADAAAAAAAEAPj/AAADAAAAAAADAPj/AAADAAAAAAACAPj/AAADAAAAAAABAPj/AAADAAAAAAAAAPj/AAADAAAAAAD///j/AAADAAAAAAD+//j/AAADAAAAAAD9//j/AAADAAAAAAD8//j/AAADAAAAAAD7//j/AAADAAAAAAD6//j/AAADAAAAAAD5//j/AAADAAAAAAD4//j/AAADAAAAAAD3//j/AAADAAAAAAD2//n/AAADAAAAAAD2//r/AAADAAAAAAD2//v/AAADAAAAAAD2//z/AAADAAAAAAD2//3/AAADAAAAAAD2//7/AAADAAAAAAD2////AAADAAAAAAD2/wAAAAADAAAAAAD2//j/AAADAAAAAAAEAP7/AAAEAAAAAAAFAP7/AAAEAAAAAAAHAPz/AAAEAAAAAAAIAPz/AAAEAAAAAAANAAAAAAADAAAAAAANAPj/AAADAAAAAAD7//7/AAAEAAAAAAD6//7/AAAEAAAAAAD5//z/AAAEAAAAAAD4//z/AAAEAAAAAAA=")
tile_set = ExtResource("2_vc7tt")

[node name="Dark" type="TileMapLayer" parent="TileMaps"]
material = SubResource("CanvasItemMaterial_ivyll")
tile_map_data = PackedByteArray("AAD3/wAAAAABAAAAAAD4/wAAAAABAAAAAAD5/wAAAAABAAAAAAD6/wAAAAABAAAAAAD7/wAAAAABAAAAAAD8/wAAAAABAAAAAAD9/wAAAAABAAAAAAD+/wAAAAABAAAAAAD//wAAAAABAAAAAAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAD2////AAACAAEAAAD2//7/AAACAAEAAAD2//3/AAACAAEAAAD2//z/AAACAAEAAAD2//v/AAACAAEAAAD2//r/AAACAAEAAAD2//n/AAACAAEAAAD3//j/AAABAAIAAAD4//j/AAABAAIAAAD5//j/AAABAAIAAAD6//j/AAABAAIAAAD7//j/AAABAAIAAAD8//j/AAABAAIAAAD9//j/AAABAAIAAAD+//j/AAABAAIAAAD///j/AAABAAIAAAAAAPj/AAABAAIAAAABAPj/AAABAAIAAAACAPj/AAABAAIAAAADAPj/AAABAAIAAAAEAPj/AAABAAIAAAAFAPj/AAABAAIAAAAGAPj/AAABAAIAAAAHAPj/AAABAAIAAAAIAPj/AAABAAIAAAAJAPj/AAABAAIAAAAKAPj/AAABAAIAAAALAPj/AAABAAIAAAAMAPj/AAABAAIAAAANAPn/AAAAAAEAAAANAPr/AAAAAAEAAAANAPv/AAAAAAEAAAANAPz/AAAAAAEAAAANAP3/AAAAAAEAAAANAP7/AAAAAAEAAAANAP//AAAAAAEAAAA=")
tile_set = ExtResource("2_vc7tt")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_xk1af")

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = 261.0
offset_top = -79.0
offset_right = 369.0
offset_bottom = -56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ng48n")
theme_override_font_sizes/font_size = 8
text = "x coins"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RespawnTimer" type="Timer" parent="GameManager"]
unique_name_in_owner = true
wait_time = 0.6

[node name="PowerupManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_vq3ky")

[node name="Player" parent="." instance=ExtResource("7_k3r30")]
unique_name_in_owner = true
position = Vector2(1, 0)
collision_mask = 29
health = 50

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_bottom = 100
limit_smoothed = true

[node name="KillZone" parent="." instance=ExtResource("8_wevp2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(1, 110)
shape = SubResource("WorldBoundaryShape2D_ko5uo")

[node name="WorldState" type="Node2D" parent="."]

[node name="Lighting" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="Lighting"]
color = Color(0, 0, 0, 1)

[node name="PointLight2D" parent="Lighting" instance=ExtResource("7_xmpam")]
position = Vector2(111, -113)
scale = Vector2(2, 2)

[node name="Camera" parent="Lighting" instance=ExtResource("8_7sfio")]
position = Vector2(-89, -110)
scale = Vector2(2, 2)
max_angle_left = -45
max_angle_right = 45
rotation_speed = 30

[node name="Objects" type="Node2D" parent="."]

[node name="Locker" parent="Objects" instance=ExtResource("9_mjunc")]
position = Vector2(45, -12)

[node name="Laser" parent="Objects" instance=ExtResource("10_mp7eo")]
position = Vector2(-122, -82)
rotation = 0.329374

[connection signal="timeout" from="GameManager/RespawnTimer" to="GameManager" method="_on_respawn_timer_timeout"]
[connection signal="game_over" from="Player" to="GameManager" method="_on_player_game_over"]
[connection signal="game_over" from="Lighting/Camera" to="GameManager" method="_on_player_game_over"]
[connection signal="hidePlayer" from="Objects/Locker" to="Player" method="_on_locker_hide_player"]
[connection signal="revealPlayer" from="Objects/Locker" to="Player" method="_on_locker_reveal_player"]
